# crewai_flow_template

./: README.md  poem.txt  pyproject.toml
src/created_flow/: main.py
