[project]
name = "created_flow"
version = "0.1.0"
description = "created_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0",
]

[project.scripts]
kickoff = "created_flow.main:kickoff"
run_crew = "created_flow.main:kickoff"
plot = "created_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
